updated company service and test